Fix page content jump on md-autocomplete opening
Found the tip on
https://github.com/angular/material/issues/3409

--- a/webroot/css/layouts/default.css
+++ b/webroot/css/layouts/default.css
@@ -119,6 +119,10 @@ html, body {
     min-width: 100%;
 }
 
+body {
+    height: auto;
+}
+
 textarea {
     border: 1px solid #ddd;
 }
